--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "less": "^3.0.0-alpha.3",
+    "socket.io-client": "^2.0.4",
     "vonic": "2.0.0-beta.13",
     "vue": "^2.2.5",
     "vue-router": "^2.3.0"
