--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,8 @@
     "socket.io-client": "^2.0.4",
     "vonic": "2.0.0-beta.13",
     "vue": "^2.2.5",
-    "vue-router": "^2.3.0"
+    "vue-router": "^2.3.0",
+    "vuex": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
