--- a/front/package.json
+++ b/front/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "echarts": "^3.7.2",
     "less": "^3.0.0-alpha.3",
     "socket.io-client": "^2.0.4",
     "vonic": "2.0.0-beta.13",
     "vue": "^2.2.5",
+    "vue-echarts": "^2.4.1",
     "vue-router": "^2.3.0",
     "vuex": "^3.0.0"
   },
