--- a/front/package.json
+++ b/front/package.json
@@ -9,12 +9,16 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "cropperjs": "^1.1.3",
     "echarts": "^3.7.2",
+    "exif-js": "^2.3.0",
+    "jquery": "^3.2.1",
     "less": "^3.0.0-alpha.3",
     "socket.io-client": "^2.0.4",
     "vonic": "2.0.0-beta.13",
     "vue": "^2.2.5",
     "vue-echarts": "^2.4.1",
+    "vue-resource": "^1.3.4",
     "vue-router": "^2.3.0",
     "vuex": "^3.0.0"
   },
